Improve the styling of the responsive CSS: * fix scrollbar issues: the vote buttons no longer create scroll bars * fix PIN form width issues: make PIN input field based on the set PIN length, such that the input field no longer creates an unnecessarily wide content * improve the layout of a deactivated LiveVoting: spacing of texts and buttons improved * properly centre the text on the vote buttons

--- a/templates/responsive.css
+++ b/templates/responsive.css
@@ -15,35 +15,32 @@
 		font-size:     1.2em;
 	}
 
-	.lvo_header {
-		padding-left: 10px;
-	}
-
 	.lvo_body {
+		position:   relative;
+		left:       0;
+		top:        0;
 		border:     none;
 		background: none;
-		padding:    0px;
-		margin:     0px;
+		padding:    0;
+		margin:     0;
 		height:     auto;
-		width:      100%;
+		filter:     none;
 	}
 
 	.lvo_choice_container {
 		float:         none;
 		height:        50px;
-		width:         90% !important;
+		width:         100% !important; /* override inline CSS */
 		margin-bottom: 20px;
-		padding:       0px;
+		padding:       0;
 	}
 
 	.lvo_choice_footer {
-		margin:        0px;
-		width:         100%;
+		margin:        0;
+		padding:       0;
 		background:    none;
 		border:        none;
 		text-align:    left;
-		color:         #FFFFFF;
-		padding-right: 0px;
 	}
 
 	.lvo_choice_cipher {
@@ -51,33 +48,44 @@
 		color:     #000000;
 	}
 
+	.inactive {
+		display: none;
+	}
+
+	#lvo_isactive {
+		margin-top: 1em;
+		margin-bottom: 1em;
+	}
+
 	a.lvo_vote_link {
-		width:      70%;
-		text-align: center;
-		height:     30px;
+		text-align:     center;
+		height:         30px;
+		line-height:    30px;
+		display:        block;
 	}
 
 	a.lvo_vote_link:hover {
 		text-decoration: none;
 	}
 
-	table.lvo_cipher_titles td {
-		display:   block;
-		font-size: 1.0em;
-		padding:   0px;
+	.ilTabsTableRow div.ilTabContentOuter {
+		float: none;
 	}
 
-	div.ilTabContentOuter {
-		float: none !important;
+	table.lvo_cipher_titles td {
+		display:    block;
+		font-size:  1.0em;
+		padding:    0;
+		float:      left;  /* for IE */
+		clear:      both;  /* for IE */
 	}
+
 
 	table.lvo_cipher_titles {
-		margin: 0px;
+		margin: 0;
 	}
 
 	#il_center_col {
-		float:  none !important;
-		width:  100%;
-		margin: 0px;
+		margin: 0;
 	}
 }
